# laulud

./: .gitignore  .rustfmt.toml  Makefile.toml  README.md  docker-compose.build.yml  docker-compose.yml  example.env  rust-toolchain  rust-toolchain.toml  schema.ts
.github/workflows/: ci.yml
api/: .dockerignore  .env  Cargo.toml  Dockerfile  Rocket.toml  entrypoint.sh  prd.Dockerfile  rust-toolchain.toml  schema.graphql
api/config/: default.json
api/migrations/: 0001_initial_setup.sql
api/schema/: core.graphql  mutation.graphql  query.graphql  spotify.graphql
api/src/: auth.rs  config.rs  db.rs  error.rs  main.rs  routes.rs  schema.rs  schema_gen.rs  spotify.rs  util.rs
api/src/graphql/: core.rs  internal.rs  item.rs  mod.rs  mutation.rs  query.rs  schema.rs  spotify.rs  tag.rs
api/src/routes/: auth.rs  graphql.rs  item.rs  mod.rs  tag.rs  track.rs  user.rs
api/src/spotify/: internal.rs  mod.rs  types.rs
api/src/util/: auth.rs  mod.rs
deploy/: deploy.sh
deploy/helm/: Chart.yaml
deploy/helm/templates/: api.yml  db.yml  ingress.yml  secrets.yml  ui.yml
deploy/terraform/: .terraform.lock.hcl  README.md  backend.tf  helm.tf  providers.tf  variables.tf
ui/: .babelrc.json  .eslintignore  .eslintrc.js  Dockerfile  config-overrides.js  graphql-schema-linter.config.js  nginx.conf  package-lock.json  package.json  prd.Dockerfile  relay.config.js  tsconfig.json  webpack.config.js
ui/public/: index.html  manifest.json
ui/scripts/: build_schema.sh  run.sh
ui/src/: App.tsx  api.ts  index.css  index.tsx  setupProxy.js  theme.ts
ui/src/api/: fd.ts  queryCache.ts  types.ts
ui/src/components/: App.tsx  ItemList.tsx  ItemListEntry.tsx  Loading.tsx  MainPage.tsx  NewTagChip.tsx  PageContainer.tsx  SearchBar.tsx  TagChip.tsx  TagChips.tsx  TrackList.tsx  TrackSearchBar.tsx
ui/src/components/common/: UnstyledLink.tsx
ui/src/components/core/: CoreContent.tsx  Header.tsx  HeaderLink.tsx  LogOutButton.tsx  NotLoggedInRedirect.tsx  PageContainer.tsx
ui/src/components/generic/: AlbumArt.tsx  DataContainer.tsx  ErrorSnackbar.tsx  ItemArt.tsx  ItemIcon.tsx  Link.tsx  NavLink.tsx  PageContainer.tsx  SearchBar.tsx  SimpleTable.tsx  SpotifyLink.tsx  UnstyledLink.tsx
ui/src/components/trackSearch/: TrackSearchList.tsx  TrackSearchView.tsx
ui/src/hooks/: useAuthState.ts  useDebouncedValue.ts  useLauludQuery.ts  useMutation.ts  useMutationDeleteItemTag.ts  useMutationNewItemTag.ts  useRouteQuery.ts
ui/src/pages/Home/: HomePage.tsx
ui/src/pages/Login/: LoginPage.tsx
ui/src/pages/NotFound/: NotFoundPage.tsx
ui/src/pages/Search/: ItemDetails.tsx  ItemSearchList.tsx  ItemSearchLoader.tsx  ItemSearchTabContent.tsx  ItemSearchView.tsx  SearchPage.tsx
ui/src/pages/Search/ItemDetailsCard/: ItemDetails.tsx  ItemDetailsCard.tsx  (+2 more)
ui/src/pages/Tags/: TagDetails.tsx  TagDetailsItemList.tsx  TagDetailsLoader.tsx  TagDetailsView.tsx  TagList.tsx  TagListLoader.tsx  TagsPage.tsx
ui/src/pages/TrackSearch/: TrackSearchPage.tsx
ui/src/pages/Tracks/: NewTagChip.tsx  TagChips.tsx  TrackDetails.tsx  TrackSearchList.tsx  TracksPage.tsx
ui/src/util/: UserContext.ts  environment.ts  errors.ts  queryCache.ts  schema.ts  types.ts  withQuery.tsx  withSuspense.tsx
