[package]
authors = ["Lucas Pickering <lucas@lucaspickering.me>"]
edition = "2018"
license = "MIT"
name = "laulud-api"
version = "0.1.0"

[profile.dev]
# https://jakedeichert.com/blog/reducing-rust-incremental-compilation-times-on-macos-by-70-percent/
split-debuginfo = "unpacked"

[dependencies]
derive_more = "0.99"
env_logger = "0.8"
itertools = "0.9"
juniper = "0.15"
juniper-from-schema = {git = "https://github.com/LucasPickering/juniper-from-schema", branch = "137-multiple-schema-files"}
log = "0.4"
mongodb = {version = "2.0.0-alpha.1", default-features = false, features = ["tokio-runtime"]}
oauth2 = "4.0.0"
reqwest = {version = "0.11", default-features = false, features = ["rustls-tls"]}
rocket = {version = "0.5.0-rc.1", features = ["json", "secrets"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
thiserror = "1.0"
time = {version = "0.2", features = ["serde"]}
tokio = {version = "1.4", features = ["full"]}
