[package]
authors = ["Lucas Pickering <lucas@lucaspickering.me>"]
edition = "2018"
license = "MIT"
name = "laulud-api"
version = "1.0.0"

[profile.dev]
# https://jakedeichert.com/blog/reducing-rust-incremental-compilation-times-on-macos-by-70-percent/
split-debuginfo = "unpacked"

[dependencies]
async-graphql = {version = "4.0.14", default-features = false, features = ["log"]}
async-graphql-rocket = "4.0.14"
derive_more = "0.99"
env_logger = "0.8"
futures = "0.3.24"
itertools = "0.9"
log = "0.4"
mongodb = {version = "2.3.0", default-features = false, features = ["tokio-runtime"]}
oauth2 = "4.2.3"
reqwest = {version = "0.11", default-features = false, features = ["rustls-tls"]}
rocket = {version = "0.5.0-rc.2", features = ["json", "secrets"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
thiserror = "1.0"
time = {version = "0.2", features = ["serde"]}
tokio = {version = "1.4", features = ["full"]}
